@startuml Challenge Service - ER Diagram

!define TABLE entity
!define PRIMARY_KEY <<PK>>
!define FOREIGN_KEY <<FK>>
!define NOT_NULL <<NN>>
!define UNIQUE <<U>>

title Challenge Service - Entity Relationship Diagram

entity "Challenge" as challenge {
  * id : SERIAL <<PK>>
  --
  * name : VARCHAR(255) <<NN>>
  description : TEXT
  * type : VARCHAR(50) <<NN>>
  * start_date : DATE <<NN>>
  * end_date : DATE <<NN>>
  target_value : DECIMAL(10,2)
  target_unit : VARCHAR(20)
  * created_by : VARCHAR(255) <<NN>>
  status : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "ChallengeParticipant" as participant {
  * id : SERIAL <<PK>>
  --
  * challenge_id : INTEGER <<FK>>
  * user_id : VARCHAR(255) <<NN>>
  joined_at : TIMESTAMP
  status : VARCHAR(20)
}

entity "ChallengeProgress" as progress {
  * id : SERIAL <<PK>>
  --
  * challenge_id : INTEGER <<FK>>
  * user_id : VARCHAR(255) <<NN>>
  * workout_id : INTEGER <<NN>>
  * progress_value : DECIMAL(10,2) <<NN>>
  * workout_type : VARCHAR(50) <<NN>>
  created_at : TIMESTAMP
}

' Relationships
challenge ||--o{ participant : "has many participants"
challenge ||--o{ progress : "tracks progress"

note right of challenge
  **Challenge Service Database**
  
  **Purpose**: Manages challenges and progress
  **Isolation**: Separate from workout data
  **Consistency**: Owns challenge-related data
  
  **Key Features**:
  - Challenge definitions
  - Participant management
  - Progress tracking
  - Event-driven updates
end note

note right of participant
  **Participant Management**
  - Tracks who joined which challenges
  - Manages participation status
  - Prevents duplicate participation
end note

note right of progress
  **Progress Tracking**
  - Links to workouts (by ID reference)
  - Calculates progress values
  - Tracks completion status
  - Event-driven updates
end note

note bottom of participant
  **UNIQUE constraint**: (challenge_id, user_id)
  **Prevents**: Duplicate participation
end note

note bottom of progress
  **UNIQUE constraint**: (challenge_id, user_id, workout_id)
  **Prevents**: Duplicate progress entries
end note

@enduml

